--- a/generateCure/titlegen.html
+++ b/generateCure/titlegen.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>Generate Cure</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
 		<link href="https://fonts.googleapis.com/css?family=Princess+Sofia" rel="stylesheet"> 
