--- a/pwa_colorthief/index.html
+++ b/pwa_colorthief/index.html
@@ -19,6 +19,9 @@
 				<p>
 					Select an image using the button above and Color Thief will find the 5 most prominent colors.
 				</p>
+				<p>
+					Awesome <a href="http://lokeshdhakar.com/projects/color-thief/">Color Thief</a> library by <a href="http://lokeshdhakar.com/">Kokesh Dhakar</a>.
+				</p>
 			</div>
 			<div id="swatches">
 				<div v-for="swatch in swatches" class="swatch" :style="swatch.style"></div>
