--- a/vuetextbasedgame/index.html
+++ b/vuetextbasedgame/index.html
@@ -16,7 +16,7 @@
 			</div><div v-else>
 				<div id="roomDesc" v-if="room">
 					<p>
-					{{roomDesc}}
+					{{room.description}}
 					</p>
 
 					<p v-if="room.exits.length > 1">
