--- a/vueweather/v2/index.html
+++ b/vueweather/v2/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
-<body class="darken">
+<body>
 
 	<div id="app" v-cloak>
 		<div v-if="loading">
