--- a/taipan/v1/index.html
+++ b/taipan/v1/index.html
@@ -26,6 +26,10 @@
 			hold: {{ hold }}<br/>
 
 			<p>
+				Cost of Goods at Port: {{ costOfGoods }}
+			</p>
+			
+			<p>
 				<b>to build next</b><br/>
 				prices in current port<br/>
 				action to travel to port<br/>
