--- a/taipan/v1/index.html
+++ b/taipan/v1/index.html
@@ -30,8 +30,21 @@
 			</p>
 			
 			<p>
+			<button @click="doPurchase">Purchase</button> 
+			<input v-model.number="purchaseAmt" type="number"> units of 
+			<select v-model="purchaseGood">
+				<option v-for="good in goods">{{good}}</option>
+			</select>.
+			<br/>
+			<button @click="doSale">Sell</button> 
+			<input v-demo="sellAmt" type="number"> units of 
+			<select v-model.number="sellGood">
+				<option v-for="good in goods">{{good}}</option>
+			</select>.
+			</p>
+
+			<p>
 				<b>to build next</b><br/>
-				prices in current port<br/>
 				action to travel to port<br/>
 				action to buy / sell<br/>
 			</p>
@@ -40,7 +53,7 @@
 
 	</div>
 
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>	
+	<script src="https://cdn.jsdelivr.net/npm/vue"></script>	
 	<script src="https://unpkg.com/vuex"></script>
 	<script src="app.js"></script>	
 </body>
