--- a/tweetimages2/index.html
+++ b/tweetimages2/index.html
@@ -14,14 +14,14 @@
 	<p>
 		This tool provides an "image only" view of a Twitter account. Simply enter the username of an account 
 		and you'll see the most recent pictures they've embedded into their Tweets. You can click an individual
-		image for a close up view.
+		image for a close up view. A great example account is <code>oneperfectshot</code>.
 	</p>
 
 	<div id="statusArea"></div>
 
 	<div id="searchForm" style="display:none">
 		<p>
-			<input type="text" id="twitterAccount" placeholder="Twitter Account" value="oneperfectshot">
+			<input type="text" id="twitterAccount" placeholder="Twitter Account" >
 			<button id="searchButton">Get Images</button>
 		</p>
 	</div>
