--- a/generateCure/titlegen.html
+++ b/generateCure/titlegen.html
@@ -22,7 +22,7 @@
 		</div>
 
 		
-		<script src="https://unpkg.com/vue"></script>
+		<script src="https://unpkg.com/vue@2"></script>
 		<script src="titlegen.js"></script>
 		<script src="cure.js"></script>
 
