--- a/infiniteclick/index.html
+++ b/infiniteclick/index.html
@@ -14,7 +14,7 @@
 <h2>Infinite Click</h2>
 <div x-data="app">
 	<p>
-	<strong>Wealth: </strong> <span x-text="shinyObjects"></span>
+	<strong>Wealth: </strong> <span x-text="numFormat(shinyObjects)"></span>
 	<span x-text="message" class="message"></span>
 	</p>
 
