--- a/soundboard/index.html
+++ b/soundboard/index.html
@@ -15,6 +15,7 @@
 
         <!-- Audio Element -->
         <!-- Using a sample audio file from MDN for demonstration -->
+        <!-- quick hack -->
         <audio id="myAudio" controls crossorigin="anonymous">
             <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
