--- a/bs_sentiment/index.html
+++ b/bs_sentiment/index.html
@@ -16,8 +16,9 @@
   </header>
   <main>
     <div id="dashboard-content">
+
       <template x-for="card in cards" :key="card.term">
-        <sl-card class="card-header">
+        <sl-card class="card-header" :class="{'bad': card.sentiment < -0.5, 'good': card.sentiment > 0.5}">
           <div slot="header">
             <span x-text="card.term"></span>
             <sl-icon-button name="trash" label="Delete" @click="deleteTerm(card.term)"></sl-icon-button>
